fix hubspot response and add associations
