# app/Models/Association.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Association extends Model
+{
+    protected $guarded = ["id", "created_at", "updated_at"];
+}
