# app/Models/Contact.php
@@ -3,6 +3,9 @@
 namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
+use App\Models\Deal;
+use App\Models\Association;
 
 class Contact extends Model
 {
@@ -11,4 +14,9 @@ class Contact extends Model
     protected $casts = [
         "last_client_updated" => "datetime"
     ];
+
+    public function deals(): BelongsToMany
+    {
+        return $this->belongsToMany(Deal::class)->using(Association::class);
+    }
 }
