# app/Models/Deal.php
@@ -3,6 +3,9 @@
 namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
+use App\Models\Contact;
+use App\Models\Association;
 
 class Deal extends Model
 {
@@ -11,4 +14,9 @@ class Deal extends Model
     protected $casts = [
         "last_client_updated" => "datetime"
     ];
+
+    public function contacts(): BelongsToMany
+    {
+        return $this->belongsToMany(Contact::class)->using(Association::class);
+    }
 }
